# pdfco-mcp

./: .gitignore  README.md  main.py  mcp_server.py  models.py  openapi.json  pyproject.toml
pdfco/mcp/: __init__.py  models.py
pdfco/mcp/services/: client.py  pdf.py  service.py
pdfco/mcp/tools/apis/: conversion.py  document.py  extraction.py  file.py  form.py  job.py  merge.py  modification.py  page.py  search.py  searchable.py  security.py
tools/: file.py  job.py  key.py  openapi.py  pdf.py
tools/apis/: conversion.py  file.py  job.py  merge.py
