[project]
name = "pdfco-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.6.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
pdfco-mcp = "pdfco.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdfco"]
